--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,6 @@ body {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
-
     display: flex;
     flex-direction: column;
     min-height: 100vh
@@ -12,6 +11,8 @@ body {
 
 .main-content {
     flex-grow: 1;
+    margin-top:80px ;
+    
 }
 
 footer {
