--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <div class="main-content">
+    <div class="main-content" align="center">
         {{>header}}
         <img class="portrait" src="/img/me.png">
+        <h5>This is me . The most weired person.</h5>
+        <h5>I designed this just for fun.<br>And i have nothing to write.</h5>
     </div>
     
     {{>footer}}
