--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <div class="main-content">
+    <div class="main-content" align="center">
         {{>header}}
         <p>{{helpText}}</p>
+        <h4>Believe me no one can help you.</h4>
+        <h4>This is just done because I was sitting free.<br> And some how I needed to pass my time.</h5>
     </div>
     
     {{>footer}}
