--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="main-content" >
+    <div class="main-content" align="center" >
         {{>header}}
 
         <p>Use this site to get your weather!</p>
